[package]
name = "soko-test"
version = "0.1.1"
authors = ["AvaAvarai <AvaAvarai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.52.1"
piston2d-graphics = "0.39.0"
piston2d-opengl_graphics = "0.76.0"
pistoncore-glutin_window = "0.67.1"
